Updated demo project to be fully functional, removed scrollable class in templates that caused conflict with mobileangularui

--- a/template/rcalendar/day.html
+++ b/template/rcalendar/day.html
@@ -20,7 +20,7 @@
             </table>
         </div>
     </div>
-    <div class="scrollable" style="height: 400px">
+    <div class="" style="height: 400px">
         <table class="table table-bordered table-fixed">
             <tbody>
             <tr ng-repeat="tm in rows track by $index">
