--- a/template/rcalendar/month.html
+++ b/template/rcalendar/month.html
@@ -23,7 +23,7 @@
         </tbody>
     </table>
     <div ng-if="showEventDetail" class="event-detail-container">
-        <div class="scrollable" style="height: 200px">
+        <div class="" style="height: 200px">
             <table class="table table-bordered table-striped table-fixed">
                 <tr ng-repeat="event in selectedDate.events" ng-if="selectedDate.events">
                     <td ng-if="!event.allDay" class="monthview-eventdetail-timecolumn">{{event.startTime|date: 'HH:mm'}}
