--- a/template/rcalendar/calendar.html
+++ b/template/rcalendar/calendar.html
@@ -2,12 +2,12 @@
     <div class="row calendar-navbar">
         <div class="nav-left col-xs-2">
             <button type="button" class="btn btn-default btn-sm" ng-click="move(-1)"><i
-                    class="glyphicon glyphicon-chevron-left"></i></button>
+                    class="fa fa-chevron-left"></i></button>
         </div>
         <div class="calendar-header col-xs-8"><strong>{{title}}</strong></div>
         <div class="nav-right col-xs-2">
             <button type="button" class="btn btn-default btn-sm" ng-click="move(1)"><i
-                    class="glyphicon glyphicon-chevron-right"></i></button>
+                    class="fa fa-chevron-right"></i></button>
         </div>
     </div>
     <dayview ng-switch-when="day"></dayview>
