--- a/template/rcalendar/week.html
+++ b/template/rcalendar/week.html
@@ -31,7 +31,7 @@
             </table>
         </div>
     </div>
-    <div class="scrollable" style="height: 400px">
+    <div class="" style="height: 400px">
         <table class="table table-bordered table-fixed">
             <tbody>
             <tr ng-repeat="row in rows track by $index">
